Salesforce/force-app/main/default/objects/Meridio_Declaration_Setting__mdt/Meridio_Declaration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Meridio Declaration Setting</label>
    <pluralLabel>Meridio Declaration Settings</pluralLabel>
</CustomObject>