Salesforce/force-app/main/default/objects/Meridio_Declaration_Setting__mdt/fields/Divert_Event_Attachment_Emails__c.field-meta.xml
<CustomField>
    <fullName>Divert_Event_Attachment_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled the platform events will divert to the application log</inlineHelpText>
    <label>Divert Event Attachment Emails</label>
    <type>Checkbox</type>
</CustomField>