Salesforce/force-app/main/default/objects/Meridio_Declaration_Setting__mdt/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Comma-separated email address(es)</description>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>