Salesforce/force-app/main/default/objects/Meridio_Declaration_Setting__mdt/fields/Email_To_SF_Environment__c.field-meta.xml
<CustomField>
    <fullName>Email_To_SF_Environment__c</fullName>
    <label>Email To SF Environment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>